tests/bad/vec_literal_cannot_infer.oc
/// fail: Can't infer type of Vector literal

def main() {
    let x = $[]
}